# hxq-solana

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
docs/: WO-HXQ-SOLANA-CODEC-AWARE-01.md  competitive-comparison.md  domains.md
programs/hxq-solana/: Cargo.toml
programs/hxq-solana/src/: lib.rs
receipts/: awq_codec_demo_20260520T025454Z.json  buyer_verify_20260519T004910Z.json  devnet_deploy_20260518T234852Z.json  devnet_guardian_2026-05-20T0154Z.json  devnet_non_ai_climate_2026-05-20T0223Z.json  devnet_third_party_codecs_2026-05-20T0255Z.json  devnet_transfer_hook_2026-05-19T2344Z.json  domain_fixture_demos_20260508.json  e2e_artifact_20260518T233111Z.json  e2e_artifact_20260519T233206Z.json  explore_rga_proof_of_concept_20260510.json  gptq_codec_demo_20260520T025454Z.json  hxq_solana_lifecycle_demo_20260508.json  hxq_solana_localnet_test_20260504.json  ipfs_pin_20260520T023751Z.json  ipfs_verify_20260520T024057Z.json  localnet_e2e_20260518T233824Z.json  model_trade_20260519003746.Z.json  non_ai_climate_artifact_20260520T021733Z.json  real_sbert_layer_20260519T003559Z.json  transfer_hook_20260519T001135Z.json  verify_claim_disputed_20260510.json  verify_claim_verified_20260510.json
scripts/: buyer_decompress.py  devnet_guardian_demo.ts  devnet_transfer_hook_demo.ts  e2e_register_artifact.py  generate_test_artifacts.py  ipfs_pin.py  ipfs_verify.py  model_trade_demo.ts  non_ai_artifact_demo.py  real_layer_demo.py  register_from_receipt.ts  third_party_codec_demo.py  tsconfig.json  verify_claim.py  verify_receipt.ts
(+26 files in other folders)
