[package]
name = "hxq-solana"
version = "0.1.0"
description = "HXQ on-chain asset registry — off-chain tensor, on-chain state"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hxq_solana"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
spl-transfer-hook-interface = "0.6"
spl-tlv-account-resolution = "0.6"
